--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>歡迎使用 Git & Github</h1>
+    <h1>1113211034 林佑蘭</h1>
 
-    <p>1113211034 林佑蘭</p>
+    <p>我喜歡看書，玩手機追星</p>
 </body>
 </html>
