--- a/index.html
+++ b/index.html
@@ -77,34 +77,34 @@
                 <tr>
                     <th>#</th>
                     <th>姓名</th>
-                    <th>年齡</th>
-                    <th>城市</th>
+                    <th>隊內定位</th>
+                    <th>身分</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>張三</td>
-                    <td>28</td>
-                    <td>台北</td>
+                    <td>金南俊</td>
+                    <td>Rap line</td>
+                    <td>隊長</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>李四</td>
-                    <td>34</td>
-                    <td>高雄</td>
+                    <td>金碩珍</td>
+                    <td>主唱隊</td>
+                    <td>大哥</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>王五</td>
-                    <td>22</td>
-                    <td>台中</td>
+                    <td>閔允其</td>
+                    <td>Rap line</td>
+                    <td>老二</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>趙六</td>
-                    <td>40</td>
-                    <td>新竹</td>
+                    <td>鄭號錫</td>
+                    <td>Rap line</td>
+                    <td>老三</td>
                 </tr>
             </tbody>
         </table>
@@ -122,7 +122,7 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        這是第一項內容，您可以在這裡放置任何文字或 HTML 元素。
+                        BTS是韓國團體隊內有七人。
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        這是第二項內容，您可以放入更多詳細的資訊。
+                        是韓國最紅的人氣團體之一。
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        這是第三項內容，更多的資料可以寫在這裡。
+                        全員已服完兵役，預計明年春天三月回歸。
                     </div>
                 </div>
             </div>
